# ci_fixer_bot

./: .ci_fixer_bot_test.yml  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MESSAGE.md  README.md  pyproject.toml  test_dedup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security.yml
docs/: EMBEDDING_PROVIDERS.md
src/ci_fixer_bot/: __init__.py  __main__.py  analyzers.py  auto_calibrate.py  cli.py  config.py  core.py  deduplication.py  embedding_deduplicator.py  embedding_providers.py  embedding_providers_lmstudio.py  embedding_providers_local.py  embedding_providers_ollama.py  embedding_providers_openai.py  github_client.py  llm_providers.py  models.py  risk_assessor.py  vector_store.py
tests/: test_embedding_providers_extended.py
tests/integration/: test_local_embedding_integration.py  test_vector_store_integration.py
tests/unit/: test_deduplication.py  test_embedding_deduplicator.py  test_embedding_providers.py  test_local_embedding_provider.py  test_vector_store.py
